@@ -1,6 +1,7 @@
 ver 0.19 (not yet released)
 * protocol
   - new commands "addtagid", "cleartagid"
+  - "lsinfo" and "readcomments" allowed for remote files
 * archive
   - read tags from songs in an archive
 * input
